--- a/style.css
+++ b/style.css
@@ -16,6 +16,30 @@ body {
           box-sizing: border-box;
 }
 
+.caddilac {
+  height: 20rem;
+  -webkit-transition: all 0.3;
+  transition: all 0.3;
+  border-radius: 50%;
+}
+
+.caddilac:hover {
+  border-radius: 0;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+html,
+body {
+  font-size: 62.5%;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .btn,
 .btn:link,
 .btn:visited {
@@ -75,6 +99,136 @@ body {
           transform: scaleX(1.5) scaleY(1.6);
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+html,
+body {
+  font-size: 62.5%;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.text-effect {
+  background-image: url(./media/pexels-photo-1819650.webp);
+  background-position: center;
+  color: transparent;
+  font-size: 8rem;
+  -webkit-background-clip: text;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.text-effect:hover {
+  -webkit-transform: skewY(-10deg);
+          transform: skewY(-10deg);
+  letter-spacing: 3rem;
+}
+
+html,
+body {
+  font-size: 62.5%;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.candy-parent {
+  width: 60rem;
+  height: 40rem;
+}
+
+.candy-gallery {
+  margin: 3rem;
+  position: relative;
+}
+
+.candy-photo {
+  position: absolute;
+  height: 20rem;
+  -webkit-box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.4);
+  outline-offset: 1rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.candy-photo:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-box-shadow: 0 3rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0 3rem rgba(0, 0, 0, 0.4);
+  outline: 1rem solid #00b0ff;
+  z-index: 2;
+}
+
+.candy-gallery:hover .candy-photo:not(:hover) {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  opacity: 0.3;
+}
+
+.candy-photo-1 {
+  top: 10rem;
+  left: 15%;
+}
+
+.candy-photo-2 {
+  top: 2rem;
+  right: 0;
+}
+
+.candy-photo-3 {
+  top: -2rem;
+  left: 0;
+}
+
+html,
+body {
+  font-size: 62.5%;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.applewatch {
+  height: 30rem;
+  position: relative;
+}
+
+.applewatch-picture {
+  height: 30rem;
+  -webkit-clip-path: circle();
+          clip-path: circle();
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.applewatch-header {
+  font-size: 3rem;
+  opacity: 0;
+  color: black;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3;
+  transition: all 0.3;
+  text-transform: uppercase;
+}
+
+.applewatch:hover .applewatch-picture {
+  -webkit-filter: grayscale(90%);
+          filter: grayscale(90%);
+}
+
+.applewatch:hover .applewatch-header {
+  opacity: 1;
+  top: 50%;
 }
 
 .container {
