--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,18 @@
 @import "_variables.scss";
+@import "_caddilac.scss";
 @import "_btn.scss";
+@import "_text-effect.scss";
+@import "_candy.scss";
+@import "_applewatch.scss";
 
-.container{
-    width: 80vw;
-    margin: 2rem auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 1rem; 
-    font-size: 1.5rem;
-    align-items: center;
-    text-align: center;
+.container {
+  width: 80vw;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 1rem;
+  font-size: 1.5rem;
+  align-items: center;
+  text-align: center;
 }
